c_plus_plus/lab1/lab1ex2-4NOCONTROL.txt
cd CSE[ryan.1781@cse-sl1 ~]$ cd CSE4252/lab1
[ryan.1781@cse-sl1 lab1]$ script lab1ex2.txt
Script started, file is lab1ex2.txt
[ryan.1781@cse-sl1 lab1]$ nano lab1.cpp
[ryan.1781@cse-sl1 lab1]$ g++ -o lab1 lab1.cpp
[ryan.1781@cse-sl1 lab1]$ ./lab1
Difficulty Levels

1 - Easy
2 - Normal
3 - Hard
Choice: 2
You picked Normal.
[ryan.1781@cse-sl1 lab1]$ ./lab1
Difficulty Levels

1 - Easy
2 - Normal
3 - Hard
Choice: 5
You made an illegal choice.
[ryan.1781@cse-sl1 lab1]$ exit
exit
Script done, file is lab1ex2.txt
[ryan.1781@cse-sl1 lab1]$ script lab1ex3.txt
Script started, file is lab1ex3.txt
[ryan.1781@cse-sl1 lab1]$ nano lab1.cpp
[ryan.1781@cse-sl1 lab1]$ g++ -o lab1 lab1.cpp
lab1.cpp: In function ‘int main()’:
lab1.cpp:15:11: error: expected ‘:’ before ‘;’ token
     case 3;
           ^
lab1.cpp:25:7: error: no match for ‘operator>>’ (operand types are ‘std::ostream {aka std::basic_ostream<char>}’ and ‘const char [29]’)
  cout >> "You made an illegal choice.\n";
       ^
lab1.cpp:25:7: note: candidates are:
In file included from /usr/include/c++/4.8.2/string:53:0,
                 from /usr/include/c++/4.8.2/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8.2/bits/ios_base.h:41,
                 from /usr/include/c++/4.8.2/ios:42,
                 from /usr/include/c++/4.8.2/ostream:38,
                 from /usr/include/c++/4.8.2/iostream:39,
                 from lab1.cpp:1:
/usr/include/c++/4.8.2/bits/basic_string.tcc:996:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&)
     operator>>(basic_istream<_CharT, _Traits>& __in,
     ^
/usr/include/c++/4.8.2/bits/basic_string.tcc:996:5: note:   template argument deduction/substitution failed:
lab1.cpp:25:10: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  cout >> "You made an illegal choice.\n";
          ^
In file included from /usr/include/c++/4.8.2/istream:882:0,
                 from /usr/include/c++/4.8.2/iostream:40,
                 from lab1.cpp:1:
/usr/include/c++/4.8.2/bits/istream.tcc:963:5: note: template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
     ^
/usr/include/c++/4.8.2/bits/istream.tcc:963:5: note:   template argument deduction/substitution failed:
lab1.cpp:25:10: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  cout >> "You made an illegal choice.\n";
          ^
In file included from /usr/include/c++/4.8.2/istream:882:0,
                 from /usr/include/c++/4.8.2/iostream:40,
                 from lab1.cpp:1:
/usr/include/c++/4.8.2/bits/istream.tcc:931:5: note: template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)
     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
     ^
/usr/include/c++/4.8.2/bits/istream.tcc:931:5: note:   template argument deduction/substitution failed:
lab1.cpp:25:10: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  cout >> "You made an illegal choice.\n";
          ^
In file included from /usr/include/c++/4.8.2/iostream:40:0,
                 from lab1.cpp:1:
/usr/include/c++/4.8.2/istream:727:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
     ^
/usr/include/c++/4.8.2/istream:727:5: note:   template argument deduction/substitution failed:
lab1.cpp:25:10: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout >> "You made an illegal choice.\n";
          ^
In file included from /usr/include/c++/4.8.2/iostream:40:0,
                 from lab1.cpp:1:
/usr/include/c++/4.8.2/istream:732:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)
     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
     ^
/usr/include/c++/4.8.2/istream:732:5: note:   template argument deduction/substitution failed:
lab1.cpp:25:10: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout >> "You made an illegal choice.\n";
          ^
In file included from /usr/include/c++/4.8.2/iostream:40:0,
                 from lab1.cpp:1:
/usr/include/c++/4.8.2/istream:774:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)
     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
     ^
/usr/include/c++/4.8.2/istream:774:5: note:   template argument deduction/substitution failed:
lab1.cpp:25:10: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout >> "You made an illegal choice.\n";
          ^
In file included from /usr/include/c++/4.8.2/iostream:40:0,
                 from lab1.cpp:1:
/usr/include/c++/4.8.2/istream:779:5: note: template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)
     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
     ^
/usr/include/c++/4.8.2/istream:779:5: note:   template argument deduction/substitution failed:
lab1.cpp:25:10: note:   ‘std::ostream {aka std::basic_ostream<char>}’ is not derived from ‘std::basic_istream<char, _Traits>’
  cout >> "You made an illegal choice.\n";
          ^
[ryan.1781@cse-sl1 lab1]$ exit
exit
Script done, file is lab1ex3.txt
[ryan.1781@cse-sl1 lab1]$ script lab1ex4.txt
Script started, file is lab1ex4.txt
[ryan.1781@cse-sl1 lab1]$ nano lab1ex4.cpp
[ryan.1781@cse-sl1 lab1]$ g++ -o lab1ex4 lab1ex4.cpp
lab1ex4.cpp: In function ‘int main()’:
lab1ex4.cpp:10:15: error: expected ‘;’ before string constant
  cout << temp "°F in Celsius is " << (temp-32)*5/9 << "°C" << endl;
               ^
[ryan.1781@cse-sl1 lab1]$ nano lab1ex4.cpp
[ryan.1781@cse-sl1 lab1]$ g++ -o lab1ex4 lab1ex4.cpp
[ryan.1781@cse-sl1 lab1]$ ./lab1ex4
Input temperature in Fahrenheit: 212
212°F in Celsius is 100°C
[ryan.1781@cse-sl1 lab1]$ ./lab1ex4
Input temperature in Fahrenheit: 32
32°F in Celsius is 0°C
[ryan.1781@cse-sl1 lab1]$ ./lab1ex4
Input temperature in Fahrenheit: 98.6
98.6°F in Celsius is 37°C
[ryan.1781@cse-sl1 lab1]$ exit
exit
Script done, file is lab1ex4.txt
